syntax = "proto3";
package rpc.poll;

option go_package = "github.com/BigNoseCattyHome/aorb/backend/rpc/poll;poll";

import "comment.proto";
import "vote.proto";
import "google/protobuf/timestamp.proto";

service PollService{
  rpc CreatePoll (CreatePollRequest) returns (CreatePollResponse);  // 创建一个新的poll
  rpc GetPoll (GetPollRequest) returns (GetPollResponse);           // 获取一个poll的详细信息
  rpc ListPoll (ListPollRequest) returns (ListPollResponse);        // 分页获取多个poll
  rpc PollExist (PollExistRequest) returns (PollExistResponse);     // 判断poll是否存在
  rpc FeedPoll (FeedPollRequest) returns (FeedPollResponse);        // 获取用户关注的poll
}

message Poll{
  string poll_uuid = 1;  // 投票uuid
  string title = 2; // 投票标题
  string content = 3; // 内容说明
  repeated string options = 4;  // 投票选项
  repeated uint32 options_count = 5; // 投票计数
  string poll_type = 6; // 投票类型
  string username = 7;  // 投票发起人
  google.protobuf.Timestamp create_at = 8;  // 创建时间
  repeated comment.Comment comment_list = 9; // 评论列表
  repeated vote.Vote vote_list = 10; // 投票列表
  string ipaddress = 11; // ip地址
}

message CreatePollRequest {
  Poll poll = 1;
}

message CreatePollResponse {
  int32 status_code = 1;  // 状态码，0-成功，其他值-失败
  string status_msg = 2;  // 返回状态描述
  string poll_uuid = 3;     // 返回创建的投票uuid
}

message GetPollRequest {
  string poll_uuid = 1;
}

message GetPollResponse {
  int32 status_code = 1;  // 状态码，0-成功，其他值-失败
  string status_msg = 2;  // 返回状态描述
  Poll poll = 3;
}

message ListPollRequest {
  uint32 offset = 1; // 第几页
  uint32 limit = 2;  // 一页多少
}

message ListPollResponse {
  int32 status_code = 1;  // 状态码，0-成功，其他值-失败
  string status_msg = 2;  // 返回状态描述
  repeated Poll poll_list = 3;  // 投票列表
}

message PollExistRequest {
  string poll_uuid = 1;
}

message PollExistResponse {
  int32 status_code = 1;  // 状态码，0-成功，其他值-失败
  string status_msg = 2;  // 返回状态描述
  bool exist = 3;
}

message FeedPollRequest {
  google.protobuf.Timestamp latest_time = 1;  // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
  string username = 2;
//  string token = 2;
}

message FeedPollResponse {
  int32 status_code = 1;  // 状态码，0-成功，其他值-失败
  string status_msg = 2;  // 返回状态描述
  repeated Poll poll_list = 3;
  google.protobuf.Timestamp next_time = 4;  // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}